# homework_10

./: pyproject.toml
hw_project/: db.sqlite3
hw_project/hw_project/: settings.py  urls.py
hw_project/quotes/: forms.py  models.py  urls.py  utils.py  views.py
hw_project/quotes/migrations/: 0001_initial.py  0002_delete_quote.py
hw_project/quotes/static/quotes/: style.css
hw_project/quotes/templates/quotes/: 404.html  author_quotes.html  base.html  index.html
hw_project/quotes/templatetags/: extract.py
hw_project/users/: forms.py  models.py  urls.py  views.py
hw_project/users/migrations/: 0001_initial.py  0002_rename_text_quote_quote_remove_quote_created_at.py
hw_project/users/templates/users/: add_author.html  add_quote.html  login.html  profile.html  quote_list.html
utils/: add_quotes_to_mongo.py  authors.json  quotes.json
